<resources>

    <!-- App Strings -->
    <string name="app_name">Polar</string>
    <string name="app_name_wallpaper">Polar Wallpaper</string>

    <string name="wallpapers">Wallpapers</string>
    <string name="icons">Icons</string>
    <string name="wallpaper">Wallpaper</string>
    <string name="saved_to_x">Saved to %1$s!</string>
    <string name="wallpaper_set">Wallpaper set!</string>
    <string name="apply">Apply</string>
    <string name="save_to_device">Save to Device</string>

    <string name="finish_apply">Select your options and press Apply to finalize!</string>
    <string name="finish_holo_apply">Go To Appearance settings -> Icon Packs and select this icon pack from the list.</string>
    <string name="finish_go_apply">Go theme applied!</string>
    <string name="dismiss">Dismiss</string>
    <string name="muzei_description">Polar wallpapers.</string>
    <string name="changelog" translatable="false">Changelog</string>
    <string name="error">Error</string>
    <string name="search_icons">Search icons…</string>
    <string name="search">Search</string>
    <string name="no_results">No results</string>
    <string name="about">About</string>
    <string name="request_icons">Request Icons</string>
    <string name="request_icons_x">Request Icons (%1$d)</string>
    <string name="loading_filter">Loading filter…</string>
    <string name="loading">Loading…</string>
    <string name="no_apps">No apps</string>
    <string name="tap_to_select_app">Tap apps to select them!</string>
    <string name="tap_to_select_app_withremaining">Tap apps to select them! (%1$d remaining)</string>
    <string name="request_limited">Wait %1$s to request more</string>
    <string name="icon_request">Icon Request</string>
    <string name="preparing_icon_request">Preparing icon request…</string>
    <string name="write_storage_permission_denied">Write external storage permission denied!</string>
    <string name="no_wallpapers">No wallpapers</string>
    <string name="search_wallpapers">Search wallpapers…</string>
    <string name="reload_from_web">Reload from Web</string>
    <string name="downloading_wallpaper">Downloading wallpaper…</string>
    <string name="not_installed">Not Installed</string>
    <string name="not_installed_prompt"><![CDATA[<b>%1$s Launcher</b> is not installed. Would you like to view it in the Play Store?]]></string>
    <string name="more">MORE</string>
    <string name="more_x">MORE (%1$d)</string>
    <string name="select_all">Select All</string>
    <string name="cool">Cool</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="invalid_drawable_error"><![CDATA[Invalid drawable <b>%1$s</b>, the developer needs to fix this in <b>/res/xml/drawable.xml</b> and <b>/assets/drawable.xml</b>.]]></string>
    <string name="set_wallpaper_using">Set Wallpaper Using…</string>
    <string name="quick_apply">Quick Apply</string>
    <string name="quick_apply_desc">Tap to apply to your default launcher</string>

    <string name="transition_name_circular_reveal" translatable="false">circularReveal</string>

    <string name="invalid_license">Invalid License</string>
    <string name="invalid_license_description"><![CDATA[Please download <b>%1$s</b> from the Google Play Store! :)]]></string>
    <string name="invalid_license_description_retry">We were unable to verify your license, would you like to retry? If not, the app will close.</string>
    <string name="retry">Retry</string>
    <string name="checking_license">Checking your license…</string>

    <string name="transition_name_recyclerview_item" translatable="false">recyclerViewItem_</string>
    <string name="drawer_open">Open nav drawer</string>
    <string name="drawer_close">Close nav drawer</string>
    <string name="license_valid">Your license was verified, thank you!</string>
    <string name="request_cancelled">Request cancelled</string>
    <string name="home">Home</string>
    <string name="nav_drawer_mode">Nav drawer mode</string>
    <string name="zooper">Zooper</string>
    <string name="klwp">KLWP</string>
    <string name="kwgt">KWGT</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="permission_needed_zooper_desc"><![CDATA[ <b>%1$s</b> needs permission to access your phone\'s storage in order to save Zooper assets!]]></string>
    <string name="download_cancelled">Download cancelled!</string>
    <string name="cmte_unavailable">CyanogenMod Theme Engine is not available to this device.</string>
    <string name="lghome_unavailable">LG Home is not available to this device.</string>
    <string name="feedback">Feedback</string>
    <string name="donate">Donate</string>
    <string name="thank_you_donation">Thank you for your generosity!</string>
    <string name="donation_error">An error occurred during donation: %1$s</string>
    <string name="email_using">Email using…</string>
    <string name="unable_to_contact_server">Unable to contact the server! Check your internet connection.</string>
    <string name="search_widgets">Search widgets…</string>
    <string name="made_for_zooper">These widgets are made for Zooper Pro</string>
    <string name="zooper_already_installed">Zooper Pro is already installed!</string>
    <string name="made_for_klwp">These wallpapers are made for Kustom Wallpaper PRO (KLWP)</string>
    <string name="made_for_kwgt">These widgets are made for Kustom Widget PRO (KWGT)</string>
    <string name="kustom_already_installed">Kustom is already installed!</string>
    <string name="assets_installed">Assets installed successfully!</string>
    <string name="please_wait">Please wait…</string>
    <string name="installing_fonts">Installing fonts…</string>
    <string name="installing_iconsets">Installing iconsets…</string>
    <string name="installing_bitmaps">Installing bitmaps…</string>
    <string name="x_version_x">%1$s version: %2$s (%3$d)</string>
    <string name="select_icon">Select an icon…</string>
    <string name="default_category">Default Category</string>
    <string name="go_launcher">GO Launcher</string>
    <string name="go_launcher_notice"><![CDATA[ If the icons do not apply once you click OK: please open <b>GO Settings</b>, press <b>Icon</b>, and select this icon pack. If you see unthemed icons looking distorted, please disable <b>Show Icon Base</b> in the same menu.]]></string>
    <string name="request_uploaded">Your request has been uploaded to our server, thanks!</string>

    <string-array name="wallpaper_options" translatable="false">
        <item>@string/apply</item>
        <item>@string/save_to_device</item>
    </string-array>

</resources>
